--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/x-data-grid": "^6.18.6",
-    "@mui/x-tree-view": "^6.17.0",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/x-data-grid": "^6.19.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.2",
@@ -17,7 +17,6 @@
     "chart.js": "^4.4.1",
     "country-state-city": "^3.2.1",
     "history": "^5.3.0",
-    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -26,11 +25,10 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-js-pagination": "^3.0.3",
-    "react-material-ui-carousel": "^3.4.2",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
