--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build--prfiix frontend"
+    "dev": "nodemon backend/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,8 +21,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "react-icons": "^4.12.0",
     "stripe": "^14.9.0",
     "validator": "^13.11.0",
