--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
     "dev": "node backend/server.js",
-    "build": "npm i"
+    "build": "npm install && npm install --prefix frontend && npm run bulid --prefix"
   },
   "author": "",
   "license": "ISC",
